[tool.poetry]
name = "european-go-database"
version = "0.1.0"
description = ""
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.7.0"
pre-commit = "^3.3.3"
ruff = "^0.0.284"
mypy = "^1.5.0"

[tool.black]
line-length = 88

[tool.ruff]
ignore = ["E501"]
extend-select = ["I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
